--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Open Sans", sans-serif;
+  font-family: sans-serif;
 }
 
 *, *::before, *::after {
@@ -19,4 +19,8 @@ html {
 
 .img-flex {
   width: 100%;
+}
+
+body {
+  margin: 0;
 }
